# purpl

./: .gitignore  Cargo.toml  DEV_CONTEXT.md  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  SECURITY_WRITEUP.md  USER_GUIDE.md  WORKFLOWS.md  last_target.json  packet_sniffer.sh
src/: api.rs  bluetooth.rs  bluetooth_tests.rs  brute.rs  brute_tests.rs  dashboard.rs  executor.rs  exploit.rs  exploit_tests.rs  fuzzer.rs  history.rs  history_tests.rs  input_provider.rs  io_handler.rs  job_manager.rs  job_manager_tests.rs  main.rs  main_bg_tests.rs  main_tests.rs  nmap.rs  nmap_tests.rs  poison.rs  poison_tests.rs  report.rs  report_tests.rs  search_exploit.rs  search_exploit_tests.rs  sniffer.rs  sniffer_tests.rs  tool_model.rs  ui.rs  validation.rs  web.rs  web_tests.rs  wifi.rs  wifi_tests.rs
wordlists/: common.txt
