[package]
name = "purpl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
colored = "2.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.178"
roxmltree = "0.21.1"
ctrlc = "3.4"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
